实现 effect stop、onStop、及 readonly

--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
 	"scripts": {
 		"test": "jest"
 	},
-	"jest.autoRun": {
-		"watch": true,
-		"onStartup": [
-			"all-tests"
-		]
+	"jest": {
+		"testEnvironment": "node"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.9",
