--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
 	"name": "CONE-MINI-VUE",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "lib/cone-mini-vue.cjs.js",
+	"module": "lib/cone-mini-vue.esm.js",
 	"license": "MIT",
 	"dependencies": {
 		"jest-environment-jsdom": "^28.1.3",
+		"rollup": "^2.77.2",
 		"typescript": "^4.7.4"
 	},
 	"scripts": {
-		"test": "jest"
+		"test": "jest",
+		"build": "rollup -c rollup.config.js"
 	},
 	"jest": {
 		"testEnvironment": "node"
@@ -17,8 +20,10 @@
 		"@babel/core": "^7.18.9",
 		"@babel/preset-env": "^7.18.9",
 		"@babel/preset-typescript": "^7.18.6",
+		"@rollup/plugin-typescript": "^8.3.4",
 		"@types/jest": "^28.1.6",
 		"babel-jest": "^28.1.3",
-		"jest": "^28.1.3"
+		"jest": "^28.1.3",
+		"tslib": "^2.4.0"
 	}
 }
