--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,15 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "paths": {
+      "@cone-mini-vue/*":[
+        "./packages/*/src"  
+      ]
+    }
+  },
+  "include": [
+    "packages/*/src",
+    "packages/*/__test__"
+, "packages/reactivity/__test__"  ]
 }
